# mtg-deckstats

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
scripts/: pre_cache.py
src/mtg_deckstats/: __init__.py  __version__.py  base_step.py  canadian_highlander_step.py  combo_potential_step.py  commander_tier_step.py  create_report_step.py  deck_composition_step.py  mana_producers_step.py  mana_value_step.py  parse_deck_step.py  rank.py  rarity_step.py  report.py  run_graph.py  salt_step.py  utils.py
tests/: test_base_step.py  test_canadian_highlander_step.py  test_combo_potential_step.py  test_commander_tier_step.py  test_create_report_step.py  test_deck_composition_step.py  test_graph.py  test_mana_producers_step.py  test_mana_value_step.py  test_parse_deck_step.py  test_rank.py  test_rarity_step.py  test_report.py  test_run_graph.py  test_salt_step.py  utils.py
tests/mocks/: pre_cache.pkl  scryfall_moxfield_Agzx8zsi5UezWBUX5hMJPQ_1  scryfall_moxfield_Agzx8zsi5UezWBUX5hMJPQ_2  tappedout_board_wipes  tappedout_burst_draw  tappedout_commander_tiers  tappedout_commander_tiers_1  tappedout_commander_tiers_2  tappedout_steady_draw  tappedout_target_answers  tappedout_tutors
