[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "mtg_deckstats"
version = "0.0.1-alpha.1"
license = "MIT"
description = "Magic: the Gathering deckstats"
readme = "README.md"
authors = ["Ludovic Heyberger <940408+lheyberger@users.noreply.github.com>"]
homepage = "https://github.com/lheyberger/mtg-deckstats"
repository = "https://github.com/lheyberger/mtg-deckstats"
documentation = "https://github.com/lheyberger/mtg-deckstats"


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
mtg-parser = "^0.0.1-alpha.25"
more-itertools = "^8.13.0"


[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.5"}
pytest = "^6.2.2"
check-wheel-contents = "^0.2.0"
pylint = "^2.7.4"
flake8 = "^3.9.0"
requests-mock = "^1.8.0"
Jinja2 = "^3.1.2"


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "duplicate-code",
    "too-many-arguments",
    "too-few-public-methods",
    "stop-iteration-return",
]


[tool.coverage.run]
source = [ "src" ]


[tool.coverage.paths]
source = [ "src" ]


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
