[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "mtg_deckstats"
version = "0.0.1a8"
license = "MIT"
description = "Magic: the Gathering deckstats"
readme = "README.md"
authors = ["Ludovic Heyberger <940408+lheyberger@users.noreply.github.com>"]
homepage = "https://github.com/lheyberger/mtg-deckstats"
repository = "https://github.com/lheyberger/mtg-deckstats"
documentation = "https://github.com/lheyberger/mtg-deckstats"


[tool.poetry.scripts]
pre_cache = "scripts.pre_cache:main"


[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
more-itertools = "^9.1.0"
mtg-parser = "^0.0.1a28"
python = "^3.7"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
check-wheel-contents = "^0.4.0"
click = "^8.1.3"
coverage = {extras = ["toml"], version = "^5.5"}
flake8 = "^3.9.0"
Jinja2 = "^3.1.2"
pylint = "^2.7.4"
pytest = "^7.3.1"
requests-mock = "^1.10.0"


[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "duplicate-code",
    "too-many-arguments",
    "too-few-public-methods",
    "stop-iteration-return",
]


[tool.coverage.run]
source = [ "src" ]


[tool.coverage.paths]
source = [ "src" ]


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
